# UWO

./: CODE_OF_CONDUCT.md  LICENSE  README.md
1st Year/A/CALCULUS 1000A/: Desmos _ Graphing Calculator.lnk  OWL _ CALCULUS 1000A 007 FW19 _ 主页.lnk  WeBWorK.lnk  定积分计算器 - Symbolab.lnk  新建文本文档.txt
1st Year/A/COMPSCI 1026A/: 0.py  Answers of Quiz_1_Fall.py  Class Calculator.py  Class Counter.py  Class Fraction.py  Class Tally.py  Class Vehicles.py  Class.py  Def Format.py  Def Return.py  If - Case Wineserving.py  If.py  Inventory.py  List - self.py  List.py  Max Sum.py  Notes.py  OWL _ COMPSCI 1026A 003 FW19 _ Overview.lnk  OWL _ COMPSCI 1026A 003 FW19 _ 主页.lnk  Or.py  Outfile.py  Set.py  Swap.py  Tools.py  Try.py  While.py  input.txt  list[;;-1].py  number.txt  (+6 more)
4th Year/6/: Makefile  Project2.vcxproj  Project2.vcxproj.filters  WaterShader.geoshader  WaterShader.tcs
5th Year/A/COMPSCI 3307A/Group Assignment - Final Stage/: API.cpp  CMakeLists.txt  Database.cpp  Router.cpp  Voice.cpp  Webserver.cpp
5th Year/A/COMPSCI 3307A/Group Assignment - Final Stage/include/: crow_all.h
5th Year/A/COMPSCI 3307A/Group Assignment - Final Stage/templates/: search.html  search1.html
5th Year/A/COMPSCI 3307A/Group Assignment - Final Stage/tools/: get_multipart_file.hpp
Assignment 1/: assignment1markingscheme.xls
Assignment 2/: Sth about assgn2.docx  yfeng445_Problemfree Inc._A2.docx
Assignment 3/: yfeng445_CORRECTED_ER_diagram.dia  yfeng445_ER_diagram (Remastered).dia.autosave  yfeng445_Service.accdb  新建 Microsoft Word 文档.docx
Group Assignment - Final Stage/: API.h  Database.h  Doxyfile  README.md  Router.h  Voice.h  VoiceAPI.cpp  VoiceAPI.h  Webserver.h  main.cpp
(+2119 files in other folders)
